--- a/backends/bevy_picking_rapier/Cargo.toml
+++ b/backends/bevy_picking_rapier/Cargo.toml
@@ -13,7 +13,7 @@ resolver = "2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.11.0-dev", default-features = false, features = [
+bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
     "bevy_render",
 ] }
 bevy_rapier3d = "0.21"
