--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ bevy_rapier3d = { optional = true, version = "0.21" }
 bevy_picking_core = { path = "crates/bevy_picking_core", version = "0.1" }
 bevy_picking_input = { path = "crates/bevy_picking_input", version = "0.1" }
 bevy_picking_selection = { optional = true, path = "crates/bevy_picking_selection", version = "0.1" }
-bevy_picking_highlight = { optional = true, path = "crates/bevy_picking_highlight", version = "0.1" }
+bevy_picking_highlight = { optional = true, path = "crates/bevy_picking_highlight", version = "0.1", default-features = false }
 bevy_picking_raycast = { optional = true, path = "backends/bevy_picking_raycast", version = "0.1" }
 bevy_picking_ui = { optional = true, path = "backends/bevy_picking_ui", version = "0.1" }
 bevy_picking_rapier = { optional = true, path = "backends/bevy_picking_rapier", version = "0.1" }
@@ -66,7 +66,7 @@ selection = [
     "bevy_picking_input/selection",
     "bevy_picking_highlight/selection",
 ]
-highlight = ["bevy_picking_highlight"]
+highlight = ["bevy_picking_highlight/pbr"]
 debug = ["bevy/bevy_text", "bevy/bevy_sprite", "bevy/default_font"]
 backend_raycast = ["bevy_picking_raycast"]
 backend_rapier = ["bevy_picking_rapier", "bevy_rapier3d"]
